5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1593_1801.log
== TEST (2019-03-26 10:59:33) 
-- CODE:
nome = ((input("Digite um nome ")
num = int((input("Numero de repeticoes do feitico: ")))
			
feitico = ("Abra" + nome)
magica = (feitico * num)

print(magica)
-- ERROR:
File "XXXX", line 2
    num = int((input()))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:59:54) 
-- CODE:
nome = input("Digite um nome ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = ("Abra" + nome)
magica = (feitico * num)

print(magica)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:02) 
-- CODE:
nome = input("Digite um nome: ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = ("Abra" + nome)
magica = (feitico * num)

print(magica)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:00:37) 
-- CODE:
nome = input("Digite um nome: ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = ("Abra" + nome)
magica = (feitico * num)

print(magica)
-- EXECUTION TIME:
0.139477
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:41) 
-- CODE:
nome = input("Digite um nome: ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = ("Abra" + nome)
magica = (feitico * num)

print(magica)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:55) 
-- CODE:
nome = input("Digite um nome: ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = (" Abra " + nome)
magica = (feitico * num)

print(magica)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:01:04) 
-- CODE:
nome = input("Digite um nome: ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = (" Abra " + nome)
magica = (feitico * num)

print(magica)
-- EXECUTION TIME:
0.148935
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:31:58) 
-- CODE:
nome = input("Digite um nome: ")
num = int(input("Numero de repeticoes do feitico: "))
			
feitico = (" Abra " + nome)
magica = (feitico * num)

print(magica)
-- EXECUTION TIME:
0.20452
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
